# acel-base

./: README.md
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  logger_example.cpp
src/lcmtypes/: Edge_t.lcm  Graph_t.lcm  KeyframeSet_t.lcm  Keyframe_t.lcm  LaserScanPoints_t.lcm  MissionInfo_t.lcm  NewDataReady_t.lcm  Octomap_t.lcm  Path_t.lcm  Point3Df_t.lcm  PolyCurveSegment_t.lcm  PolynomialCurve_t.lcm  Pose_t.lcm  QuadrotorTransform_t.lcm  TimeStamp_t.lcm  UAVTrajectoryPoint_t.lcm  UAVTrajectory_t.lcm  Vertex_t.lcm  WayPoint_t.lcm
src/lcmtypes/c/lcmtypes/: acel_lcm_msgs.h  acel_lcm_msgs_Edge_t.c  acel_lcm_msgs_Edge_t.h  acel_lcm_msgs_Graph_t.c  acel_lcm_msgs_Graph_t.h  acel_lcm_msgs_KeyframeSet_t.c  acel_lcm_msgs_KeyframeSet_t.h  acel_lcm_msgs_Keyframe_t.c  acel_lcm_msgs_Keyframe_t.h  acel_lcm_msgs_LaserScanPoints_t.c  acel_lcm_msgs_LaserScanPoints_t.h  acel_lcm_msgs_MissionInfo_t.c  acel_lcm_msgs_MissionInfo_t.h  acel_lcm_msgs_NewDataReady_t.c  acel_lcm_msgs_NewDataReady_t.h  acel_lcm_msgs_Octomap_t.c  acel_lcm_msgs_Octomap_t.h  acel_lcm_msgs_Path_t.c  acel_lcm_msgs_Path_t.h  acel_lcm_msgs_Point3Df_t.c  acel_lcm_msgs_Point3Df_t.h  acel_lcm_msgs_PolyCurveSegment_t.c  acel_lcm_msgs_PolyCurveSegment_t.h  acel_lcm_msgs_PolynomialCurve_t.c  acel_lcm_msgs_PolynomialCurve_t.h  acel_lcm_msgs_Pose_t.c  acel_lcm_msgs_Pose_t.h  acel_lcm_msgs_QuadrotorTransform.c  acel_lcm_msgs_QuadrotorTransform.h  acel_lcm_msgs_TimeStamp_t.c  acel_lcm_msgs_TimeStamp_t.h  acel_lcm_msgs_UAVTrajectoryPoint_t.c  acel_lcm_msgs_UAVTrajectoryPoint_t.h  acel_lcm_msgs_UAVTrajectory_t.c  acel_lcm_msgs_UAVTrajectory_t.h  acel_lcm_msgs_Vertex_t.c  (+4 more)
src/libraries/: CMakeLists.txt
src/utilities/: CMakeLists.txt
(+29 files in other folders)
